--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.0",
     "animate.css": "^4.1.1",
-    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.5",
+    "react-query": "^3.34.16",
     "react-simple-animate": "^3.3.12",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
+    "@types/react-infinite-scroller": "^1.2.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "^4.6.2"
