--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -20,7 +21,6 @@
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.5",
-    "react-query": "^3.34.16",
     "react-simple-animate": "^3.3.12",
     "styled-components": "^5.3.3"
   },
