--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
