--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.5",
+    "react-lottie": "^1.2.3",
     "react-simple-animate": "^3.3.12",
     "styled-components": "^5.3.3"
   },
