--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.5",
     "react-lottie": "^1.2.3",
